# AZ_demo

./: CMakeLists.txt  package.xml  setup.py  trajectory.json
arrows/: index.html
emojis/: index.html
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/AZ_demo/lib/AZ_demo/: cartesian_admittance  execute_prerecorded  execute_trajectory  get_joints  joy_teleop  recorder
install/AZ_demo/share/AZ_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/AZ_demo/share/AZ_demo/cmake/: AZ_demoConfig.cmake
install/AZ_demo/share/AZ_demo/launch/: emoji.launch.py  execute.launch.py  execute_real.launch.py  gui.launch.py  launch_arm.xml  record.launch.py  record_real.launch.py  record_sim.launch.py  start_robot.launch.py  web_interface.launch.py  web_interface_arrows.launch.py  web_interface_emojis.launch.py  xbox.launch.py
install/AZ_demo/share/ament_index/resource_index/parent_prefix_path/: AZ_demo
launch/: emoji.launch.py  execute_sim.launch   force_control.launch.py  record.launch.py  record_trajectories.xml  web_interface.launch.py  xbox.launch.py
log/: latest_build
recorded_trajectories/: trajectory.json  trajectory2.json
scripts/: emojis.html  index.html  launcher_gui.py
src/: emoji_listener.py  execute_prerecorded.cpp  execute_trajectory.py  get_joints.py  joy_teleop.py  rosbag.py  trajectory_gui.py
